# ID_TGbot

./: Dockerfile  README.md  docker-compose.yml  handler.py  main.py  pyproject.toml  services.py  test.xlsx  text.py
