[tool.poetry]
name = "ID_TGbot"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = "^3.6.0"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
pydantic = "2.7.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
